migrate LogWriter to virtual thread (#9)